--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="password">Password</string>
     <string name="authorization">Authorization</string>
     <string name="sign_in">Sign in</string>
-    <string name="regist">Sign up</string>
+    <string name="registration">Sign up</string>
     <string name="age">Age</string>
     <string name="sign_up">Sign up</string>
 </resources>
